--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ static-analysis:
       - pip install -r requirements.txt
       - pip install flake8
     script:
-      - flake8 --max-line-length=120 app/*.py
+      - flake8 app/
 
 docker-build-master:
   image: docker:latest
