--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,20 +3,19 @@ stages:
   - build
 
 static-analysis:
-    image: python:3.8
-    stage: test
-    before_script:
-      - python --version
-      - pip install pipenv
-      - cd app
-      - pipenv lock --requirements > requirements.txt
-      - pip install -r requirements.txt
-      - pip install flake8
-    script:
-      - flake8 main.py
-    except:
-      - /release\/.*/
-      - /feature\/.*/
+  image: python:3.8
+  stage: test
+  before_script:
+    - python --version
+    - pip install pipenv
+    - cd app
+    - pipenv lock --requirements > requirements.txt
+    - pip install -r requirements.txt
+    - pip install flake8
+  script:
+    - flake8 main.py
+  except:
+    - /feature\/.*/
 
 docker-build-master:
   image: docker:latest
@@ -43,5 +42,7 @@ docker-build-release:
   script:
     - docker build --pull -t "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" .
     - docker push "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG"
+    - docker tag "$CI_REGISTRY_IMAGE:$CI_COMMIT_REF_SLUG" "$CI_REGISTRY_IMAGE"
+    - docker push "$CI_REGISTRY_IMAGE"
   only:
     - /release\/.*/
