--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,21 @@
 version: "3.8"
 services:
   app:
+    container_name: suivi-bourse-app
     build:
       context: .
       dockerfile: ./Dockerfile
     volumes:
       - ./data:/data
   influxdb:
+    container_name: suivi-bourse-influxdb
     image: "influxdb"
     ports:
       - "8086:8086"
     environment:
       - INFLUXDB_DB=bourse
   grafana:
+    container_name: suivi-bourse-grafana
     image: "grafana/grafana"
     ports:
       - "3000:3000"
