--- a/grafana_provisioning/datasources/all.yml
+++ b/grafana_provisioning/datasources/all.yml
@@ -5,6 +5,6 @@ datasources:
     url: http://influxdb:8086
     access: proxy
     database: bourse
-    editable: true
+    editable: false
     jsonData:
       httpMode: GET
