--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,7 @@ services:
       dockerfile: ./Dockerfile
     volumes:
       - ./data:/data
+    restart: unless-stopped
   influxdb:
     container_name: suivi-bourse-influxdb
     image: "influxdb:1.8.3"
