feat: app parameters configuration
Multiple changes on application customisation with paramaters:
* The app now uses os.getnv() function to set up default values
* The parameters can be now be passed as CLI arg (the CLi args overrides environnement variable)
* Add a new parameter 'appScrapingInterval' to set up the scraping interval of the application
* Add a new parameter 'appDataFilePath' to set up the path of the data file
* Docker-compose read all env from .env file and set-up app, influx and grafana env variables

With these changes, the application is designed to be run standalone. It can support for example influxDB authentification.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,13 +8,17 @@ services:
     volumes:
       - ./data:/data
     restart: unless-stopped
+    environment: 
+      - "INFLUXDB_DATABASE=${INFLUXDB_DATABASE}"
+      - "INFLUXDB_PORT=${INFLUXDB_PORT}"
+      - "INFLUXDB_HOST=${INFLUXDB_HOST}"
   influxdb:
     container_name: suivi-bourse-influxdb
     image: "influxdb:1.8"
     ports:
-      - "8086:8086"
+      - "${INFLUXDB_PORT}:8086"
     environment:
-      - INFLUXDB_DB=bourse
+      - "INFLUXDB_DB=${INFLUXDB_DATABASE}"
   grafana:
     container_name: suivi-bourse-grafana
     image: "grafana/grafana"
