--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
       - "INFLUXDB_DB=${INFLUXDB_DATABASE}"
   grafana:
     container_name: suivi-bourse-grafana
-    image: "grafana/grafana"
+    image: "grafana/grafana:7.5.6"
     ports:
       - "3000:3000"
     volumes:
