--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,8 @@ services:
       - "INFLUXDB_DATABASE=${INFLUXDB_DATABASE}"
       - "INFLUXDB_PORT=${INFLUXDB_PORT}"
       - "INFLUXDB_HOST=${INFLUXDB_HOST}"
+    depends_on: 
+      - influxdb
   influxdb:
     container_name: suivi-bourse-influxdb
     image: "influxdb:1.8"
@@ -26,3 +28,5 @@ services:
       - "3000:3000"
     volumes:
       - ./grafana_provisioning:/etc/grafana/provisioning
+    depends_on: 
+      - influxdb
