feat: add new variables to influxdb

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,11 +16,16 @@ services:
       - influxdb
   influxdb:
     container_name: suivi-bourse-influxdb
-    image: "influxdb:2.0"
+    image: "influxdb:1.8"
     ports:
       - "${INFLUXDB_PORT}:8086"
     environment:
-      - "INFLUXDB_DB=${INFLUXDB_DATABASE}"
+      - "DOCKER_INFLUXDB_INIT_MODE=setup"
+      - "DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_USERNAME}"
+      - "DOCKER_INFLUXDB_INIT_PASSWORD=${INFLUXDB_PASSWORD}"
+      - "DOCKER_INFLUXDB_INIT_ORG=${INFLUXDB_ORG}"
+      - "DOCKER_INFLUXDB_INIT_BUCKET=${INFLUXDB_BUCKET}"
+      - "DOCKER_INFLUXDB_INIT_ADMIN_TOKEN=${INFLUXDB_TOKEN}"
   grafana:
     container_name: suivi-bourse-grafana
     image: "grafana/grafana:7.5.6"
