--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 INFLUXDB_HOST=suivi-bourse-influxdb
 INFLUXDB_PORT=8086
-INFLUXDB_DATABASE=bourse
+INFLUXDB_BUCKET=bourse
+INFLUXDB_USERNAME=admin
+INFLUXDB_PASSWORD=Change0n1install
+INFLUXDB_ORG=suivi-bourse
+INFLUXDB_TOKEN=c3VpdmktYm91cnNlCg
