--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,19 +1,21 @@
 version: "3.8"
 services:
-  # app:
-  #   container_name: suivi-bourse-app
-  #   build:
-  #     context: .
-  #     dockerfile: ./Dockerfile
-  #   volumes:
-  #     - ./data:/data
-  #   restart: unless-stopped
-  #   environment: 
-  #     - "INFLUXDB_DATABASE=${INFLUXDB_DATABASE}"
-  #     - "INFLUXDB_PORT=${INFLUXDB_PORT}"
-  #     - "INFLUXDB_HOST=${INFLUXDB_HOST}"
-  #   depends_on: 
-  #     - influxdb
+  app:
+    container_name: suivi-bourse-app
+    build:
+      context: .
+      dockerfile: ./Dockerfile
+    volumes:
+      - ./data:/data
+    restart: unless-stopped
+    environment:
+      - "INFLUXDB_HOST=${INFLUXDB_HOST}"
+      - "INFLUXDB_PORT=${INFLUXDB_PORT}"
+      - "INFLUXDB_TOKEN=${INFLUXDB_TOKEN}"
+      - "INFLUXDB_BUCKET=${INFLUXDB_BUCKET}"
+      - "INFLUXDB_ORG=${INFLUXDB_ORG}"
+    depends_on: 
+      - influxdb
   influxdb:
     container_name: suivi-bourse-influxdb
     image: "influxdb:2.0"
