--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,6 +19,7 @@ services:
   influxdb:
     container_name: suivi-bourse-influxdb
     image: "influxdb:2.0"
+    restart: unless-stopped
     environment:
       - "DOCKER_INFLUXDB_INIT_MODE=setup"
       - "DOCKER_INFLUXDB_INIT_USERNAME=${INFLUXDB_USERNAME}"
@@ -29,6 +30,7 @@ services:
   grafana:
     container_name: suivi-bourse-grafana
     image: "grafana/grafana:7.5.6"
+    restart: unless-stopped
     ports:
       - "3000:3000"
     volumes:
