--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,12 +1,17 @@
-FROM python:3.9
+FROM python:3 as builder
 
-WORKDIR /usr/src/app
-COPY ./app/ .
-COPY ./requirements.txt .
+COPY requirements.txt .
 
-RUN python3 -m pip install -r requirements.txt
+RUN pip install --user -r requirements.txt
 
-VOLUME [ "/data" ]
+FROM python:3-slim
+
+RUN adduser --disabled-password worker
+USER worker
+
+COPY --from=builder --chown=worker:worker /root/.local /home/worker/.local
+COPY --chown=worker:worker app /home/worker
+
+WORKDIR /home/worker
 
 CMD ["python3", "main.py"]
-
