fix: update docker-compose

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -10,7 +10,7 @@ RUN adduser --disabled-password worker
 USER worker
 
 COPY --from=builder --chown=worker:worker /root/.local /home/worker/.local
-COPY --chown=worker:worker app /home/worker
+COPY --chown=worker:worker src /home/worker
 
 WORKDIR /home/worker
 
