--- a/docker-compose/grafana_provisioning/datasources/all.yml
+++ b/docker-compose/grafana_provisioning/datasources/all.yml
@@ -1,15 +1,7 @@
 apiVersion: 1
 datasources:
-  - name: InfluxDB
-    type: influxdb
-    url: http://influxdb:8086
+  - name: Prometheus
+    type: prometheus
+    url: http://prometheus:9090
     access: proxy
-    database: bourse
     editable: false
-    secureJsonData:
-      token: ${INFLUXDB_TOKEN}
-    jsonData:
-      version: Flux
-      organization: ${INFLUXDB_ORG}
-      defaultBucket: ${INFLUXDB_BUCKET}
-      tlsSkipVerify: true
