change docker base image

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -6,9 +6,9 @@ COPY requirements.txt .
 
 RUN pip install --user --no-cache-dir -r requirements.txt
 
-FROM python:3-slim
+FROM gcr.io/distroless/python3
 
-RUN adduser --disabled-password worker
+RUN adduser --disabled-password --gecos "" worker
 USER worker
 
 COPY --from=builder --chown=worker:worker /root/.local /home/worker/.local
@@ -16,4 +16,4 @@ COPY --chown=worker:worker src /home/worker
 
 WORKDIR /home/worker
 
-CMD ["python3", "main.py"]
+ENTRYPOINT ["python3", "main.py"]
