--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Push on master
 on:
   push:
     branches:
@@ -9,11 +9,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         with:
-          fetch-depth: '0'
+          fetch-depth: "0"
 
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - uses: BSFishy/pip-action@v1
         with:
@@ -21,10 +21,9 @@ jobs:
             PyYAML
             semver
             PyGithub
-    
+
       - env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          GITHUB_BRANCH: 'master'
+          GITHUB_BRANCH: "master"
         run: |
-          python3 utils/bumping.py 
-  
+          python3 utils/bumping.py
