--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,19 +1,22 @@
-FROM python:3 as builder
+FROM python:3.9-slim as builder
 
-WORKDIR /usr/src/app
+ADD requirements.txt .
 
-COPY requirements.txt .
+RUN pip install --upgrade pip
 
-RUN pip install --user --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -r ./requirements.txt
 
 FROM gcr.io/distroless/python3
 
-RUN adduser --disabled-password --gecos "" worker
-USER worker
+COPY --from=builder /usr/local/lib/python3.9/site-packages /usr/local/lib/python3.9/site-packages
 
-COPY --from=builder --chown=worker:worker /root/.local /home/worker/.local
-COPY --chown=worker:worker src /home/worker
+ENV LC_ALL C.UTF-8
+ENV PYTHONPATH=/usr/local/lib/python3.9/site-packages/
 
-WORKDIR /home/worker
+WORKDIR /app
+
+ADD ./src /app
+
+EXPOSE 8081
 
 ENTRYPOINT ["python3", "main.py"]
