add grafana dependency for Helm Chart

--- a/charts/suivi-bourse/templates/deployment.yaml
+++ b/charts/suivi-bourse/templates/deployment.yaml
@@ -46,7 +46,7 @@ spec:
               port: metrics
           volumeMounts:
             - name: config-volume
-              mountPath: /home/worker/.config/SuiviBourse
+              mountPath: /home/appuser/.config/SuiviBourse
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       volumes:
