--- a/charts/suivi-bourse/Chart.yaml
+++ b/charts/suivi-bourse/Chart.yaml
@@ -1,7 +1,6 @@
 apiVersion: v2
 name: suivi-bourse
-description: Small app written in Python to monitor the stock shares you own. 
-
+description: Small app written in Python to monitor the stock shares you own.
 # A chart can be either an 'application' or a 'library' chart.
 #
 # Application charts are a collection of templates that can be packaged into versioned archives
@@ -11,20 +10,21 @@ description: Small app written in Python to monitor the stock shares you own.
 # a dependency of application charts to inject those utilities and functions into the rendering
 # pipeline. Library charts do not define any templates and therefore cannot be deployed.
 type: application
-
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
 version: 1.0.0
-
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "3.0"
-
+appVersion: "dev"
 dependencies:
   - name: kube-prometheus
     version: 6.x.x
     repository: https://charts.bitnami.com/bitnami
     condition: prometheusOperator.deploy
+  - name: grafana-operator
+    version: 1.x.x
+    repository: https://charts.bitnami.com/bitnami
+    condition: grafanaOperator.deploy
