--- a/docker-compose/docker-compose.yaml
+++ b/docker-compose/docker-compose.yaml
@@ -2,10 +2,10 @@ version: "3.8"
 services:
   app:
     container_name: suivi-bourse-app
-    image: "suivi-bourse-app:3.0"
+    image: "paulbrissaud/suivi-bourse-app:dev"
     restart: unless-stopped
     volumes:
-      - ./config.yaml:/root/.config/SuiviBourse/config.yaml:ro
+      - ./config.yaml:/home/appuser/.config/SuiviBourse/config.yaml:ro
     environment:
       - "SB_METRICS_PORT=${METRICS_PORT}"
       - "SB_SCRAPING_INTERVAL=${SCRAPING_INTERVAL}"
@@ -13,7 +13,7 @@ services:
       - prometheus
   prometheus:
     container_name: suivi-bourse-prom
-    image: "prom/prometheus:v2.30.0"
+    image: "prom/prometheus:v2.31.1"
     restart: unless-stopped
     volumes:
       - sb_prometheus_data:/prometheus
@@ -25,7 +25,7 @@ services:
       - '--web.console.templates=/usr/share/prometheus/consoles'
   grafana:
     container_name: suivi-bourse-graf
-    image: "grafana/grafana:8.1.3"
+    image: "grafana/grafana:8.2.3"
     restart: unless-stopped
     ports:
       - "3000:3000"
@@ -33,7 +33,6 @@ services:
       - ./grafana_provisioning:/etc/grafana/provisioning
     depends_on:
       - prometheus
-
 volumes:
   sb_prometheus_data:
     driver: local
