use PAT for the release process
#major

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
 
       - id: bump_version
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.TOKEN }}"
           GITHUB_BRANCH: "master"
         run: |
           output=$(python3 utils/bumping.py)
