--- a/docs/config.toml
+++ b/docs/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://suivi-bourse.paulbrissaud.fr'
 languageCode = 'en-us'
 title = 'Suivi Bourse'
 theme = 'relearn'
