--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            paulbrissaud/test
+            paulbrissaud/suivi-bourse-app
           # generate Docker tags based on the following events/attributes
           tags: |
             type=semver,pattern={{version}},value=${{needs.new_version.outputs.new_version}}
