--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,10 +1,11 @@
 name: Releasing process
 on:
-  push:
-    branches:
-      - master
+  pull_request:
+    branches: [ master ]
+    types: [ closed ]
 jobs:
   new_version:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     outputs:
       new_version: ${{ steps.bump_version.outputs.version }}
@@ -34,6 +35,7 @@ jobs:
           echo "::set-output name=version::$output"
 
   docker:
+    if: github.event.pull_request.merged == true
     needs: new_version
     runs-on: ubuntu-latest
     steps:
