--- a/.github/workflows/pull-request-fake.yml
+++ b/.github/workflows/pull-request-fake.yml
@@ -20,6 +20,7 @@ jobs:
       - run: 'echo "No codeql test required"'
 
   build-image:
+    name: Build image
     runs-on: ubuntu-latest
     steps:
-      - run: 'echo "No codeql test required"'
+      - run: 'echo "No build required"'
