Update Grafana and Prometheus version (#31)
#MINOR

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,6 +3,8 @@ name: "Acceptance tests"
 on:
   pull_request:
     branches: [ master ]
+    paths:
+      - 'app/**'
 
 jobs:
   python-linter:
@@ -51,6 +53,7 @@ jobs:
       uses: github/codeql-action/analyze@v1
 
   build-image:
+    name: Build image
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
