--- a/docker-compose/docker-compose.dev.yaml
+++ b/docker-compose/docker-compose.dev.yaml
@@ -4,8 +4,9 @@ services:
     depends_on:
     - prometheus
     environment:
-    - SB_SCRAPING_INTERVAL=${SCRAPING_INTERVAL}
-    image: paulbrissaud/suivi-bourse-app:3.1.3
+    - SB_SCRAPING_INTERVAL=60
+    - LOG_LEVEL=DEBUG
+    build: ../app
     restart: unless-stopped
     volumes:
     - ./config.yaml:/home/appuser/.config/SuiviBourse/config.yaml:ro
@@ -13,7 +14,7 @@ services:
     container_name: suivi-bourse-graf
     depends_on:
     - prometheus
-    image: grafana/grafana:9.0.4
+    image: grafana/grafana:9.0.7
     ports:
     - 3000:3000
     restart: unless-stopped
