--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -1,8 +1,8 @@
-APScheduler == 3.9.1
-Cerberus == 1.3.4
-PyYAML == 6.0
-confuse == 2.0.0
-logfmt_logger == 0.1.2
-prometheus_client == 0.14.1
-urllib3 == 1.26.11
-yfinance == 0.1.74
+PyYAML~=6.0
+yfinance~=0.1.70
+APScheduler~=3.9.1
+Cerberus~=1.3.4
+confuse~=1.7.0
+urllib3~=1.26.9
+logfmt-logger~=0.1.2
+prometheus-client~=0.14.1
