Change doc framework  (#63)
#patch

* move docs to docusaurus

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

* change url of documentation

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

* add contribruting guidelines

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

* add grafana external dashbaord compatible with Grafana 8

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

* add dco-check

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

* remove doc warning

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

* fix github action

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

Signed-off-by: pbrissaud <pbrissaud.pro@gmail.com>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -3,10 +3,14 @@ name: "Acceptance tests"
 on:
   pull_request:
     branches: [master]
-    paths:
-      - "app/**"
 
 jobs:
+  dco-check:
+    name: DCO Check
+    runs-on: ubuntu-latest
+    steps:
+      - uses: tisonkun/actions-dco@v1.1
+
   python-linter:
     name: Lint
     runs-on: ubuntu-latest
