--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
           GITHUB_BRANCH: "master"
         run: |
           output=$(python3 utils/bumping.py)
-          echo "::set-output name=version::$output"
+          echo "TAG=$output" >> $GITHUB_OUTPUT
 
   docker:
     if: github.event.pull_request.merged == true
@@ -52,9 +52,9 @@ jobs:
             paulbrissaud/suivi-bourse-app
           # generate Docker tags based on the following events/attributes
           tags: |
-            type=semver,pattern={{version}},value=${{needs.new_version.outputs.new_version}}
-            type=semver,pattern={{major}}.{{minor}},value=${{needs.new_version.outputs.new_version}}
-            type=semver,pattern={{major}},value=${{needs.new_version.outputs.new_version}}
+            type=semver,pattern={{version}},value=${{needs.new_version.outputs.TAG}}
+            type=semver,pattern={{major}}.{{minor}},value=${{needs.new_version.outputs.TAG}}
+            type=semver,pattern={{major}},value=${{needs.new_version.outputs.TAG}}
             type=sha,prefix=
 
       - name: Set up QEMU
@@ -81,14 +81,17 @@ jobs:
   doc:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
+    needs: new_version
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: "0"
       - run: yarn install
         working-directory: website
-      - uses: amondnet/vercel-action@v20
+      - name: Deploy to Vercel
+        uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          github-token: ${{ secrets.TOKEN }}
-          vercel-args: "--prod"
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
+          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
